Solved breaking table on small resolution

--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -658,6 +658,12 @@ span.line {
     z-index: 10;
 }
 
+@media screen and (min-width: 768px) {
+	span.line {
+		width: 145%;
+	}
+}
+
 span.line-top {
 	height: 1px;
     background-color: #000;
